# nlp-project-proposal

./: .gitignore  index.html  readme.md
.github/workflows/: typst.yml
code/: README.md  chat.py  cs639.ipynb  pyproject.toml  readme.md
code/actsvd/: .gitignore  llm_weights  main_low_rank_diff.py
code/actsvd/lib/: eval.py
code/analysis/: README.md  compute_method_overlap.py  dim_self_consistency_graph.py  eval_direction_benchmark.py  geometry_repind.py  judge_completions.py  plot_attack_types.py  plot_benchmarks.py  plot_geometry_repind.py  plot_method_overlap.py  plot_safety_utility_overlap.py  probe_attack_types.py  safety_utility_overlap.py
code/cones-repind/: README.md  extract_dim_directions.py  jailbreak_comparison.py  transformer_utils.py
code/data-exploration/: eda.r  load_datasets.py  readme.md
code/data-exploration/plots/: beaver_tails_co_occurrence.csv
code/diff-in-means/: save_modified_model.py
code/diff-in-means/pipeline/model_utils/: llama3_model.py
code/methods/actsvd/: .gitignore  main_low_rank_diff.py
code/methods/actsvd/lib/: data.py
code/methods/cones-repind/: .gitignore  rdo.py  save_modified_model.py
code/methods/dim/: .gitignore
code/methods/dim/dataset/: generate_datasets.ipynb  load_dataset.py
code/methods/dim/dataset/processed/: self_consistency_benign.json  self_consistency_harm.json
code/methods/dim/pipeline/: config.py  run_pipeline.py  run_self_consistency.py
code/methods/dim/pipeline/model_utils/: llama3_model.py  model_factory.py
code/methods/dim/pipeline/submodules/: evaluate_loss.py  select_direction.py
code/methods/dim/pipeline/utils/: hook_utils.py
code/results/: README.md
code/results/benchmark/: ActSVD-Modified_harmless_completions.json  ActSVD-Modified_jbb_completions.json  DIM-Ablated_harmless_completions.json  README.md  benchmark_results.json
code/results/geometry_repind/: geometry_directions.pt  geometry_repind_results.json
code/results/method_overlap/: README.md  comparison_results.json
code/results/safety_utility_overlap/: safety_utility_overlap_results.json
docs/: analysis_coverage.md  bibliography.bib  claude_report.typ  claude_slides.typ  colab.md  geometry_repind.md  proposal-slides.typ  proposal.typ  report.typ  slides.typ  technical_reference.md
kyle/notebooks/: colab_end_to_end.ipynb
notebooks/: colab_end_to_end.ipynb
report/: bibliography.bib  main.typ  readme.md
scripts/: build_rco_directions_json.py  compare_overlap.py  extract_actsvd_direction.py  inventory.py  run_actsvd.sh  run_all_experiments.sh  run_behavioral_benchmark.sh  run_dim.sh  run_dim_sc.sh  run_geometry_repind.sh  run_method_overlap.sh  run_probe_attack_types.sh  run_rco.sh  run_rco_eval.sh  run_safety_utility_overlap.sh  sync_figures.py
slides/: bibliography.bib  main.typ
