[project]
name = "code"
version = "0.1.0"
description = "code for nlp research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "torch",
    "transformers",
    "datasets",
    "vllm",
]

# force using cuda for pytorch
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
