[project]
name = "code"
version = "0.1.0"
description = "code for nlp research"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "transformers",
    "datasets",
    "vllm @ https://github.com/vllm-project/vllm/releases/download/v0.16.0/vllm-0.16.0+cu130-cp38-abi3-manylinux_2_35_x86_64.whl",
    "accelerate",
    "tqdm",
    "jaxtyping",
    "matplotlib",
    "litellm",
    "zstandard>=0.25.0",
    "nnsight==0.3.7",
    "strong-reject",
    "wandb>=0.25.0",
    "seaborn>=0.13.2",
]


# force cuda version 10

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
strong-reject = { git = "https://github.com/dsbowen/strong_reject.git", rev = "main" }

# vllm will take minutes to build from source every time you `uv run` if we don't get this url.
# in case it stops working, here's how to generate it

# export CUDA_HOME=/usr/local/cuda-13.0
# export VLLM_VERSION=$(curl -s https://api.github.com/repos/vllm-project/vllm/releases/latest | jq -r .tag_name | sed 's/^v//')
# export CUDA_VERSION=130
# export CPU_ARCH=x86_64
# echo https://github.com/vllm-project/vllm/releases/download/v${VLLM_VERSION}/vllm-${VLLM_VERSION}+cu${CUDA_VERSION}-cp38-abi3-manylinux_2_35_${CPU_ARCH}.whl
